finish first task

--- a/user/panel.html
+++ b/user/panel.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contact</title>
+    <title>Panel</title>
   </head>
   <body>
-    <h1>Contact</h1>
-    <p>Send me an email at programmer@example.com</p>
+    <h1>User</h1>
+    <p>Panel</p>
   </body>
 </html>
