--- a/user/settings.html
+++ b/user/settings.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Info</title>
+    <title>Settings</title>
   </head>
   <body>
-    <h1>Info</h1>
-    <p>I will put here all my accomplishments. Stay tuned!</p>
+    <h1>User</h1>
+    <p>Settings</p>
   </body>
 </html>
